--- a/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
@@ -40,9 +40,9 @@
       <td>{{ user.createdAt|date("Y-m-d") }}</td>
       <td>
         <a href="{{ path('admin_user_edit', { 'id':user.id }) }}"><img src="{{ asset('bundles/clublayout/images/ico-edit.gif') }}" class="ico" alt="Edit" /></a>
-        <a href="{{ path('admin_user_delete', { 'id':user.id }) }}"><img src="{{ asset('bundles/clublayout/images/ico-delete.gif') }}" class="ico" alt="Delete" /></a>
+        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('admin_user_delete', { 'id':user.id })} %}
         <a href="{{ path('admin_shop_subscription', { 'id':user.id }) }}"><img src="{{ asset('bundles/clublayout/images/icons/16/System-Security-Card-icon.png') }}" alt="Subscription" /></a>
-        <a href="{{ path('admin_user_ban', { 'id':user.id }) }}"><img src="{{ asset('bundles/clublayout/images/icons/16/Actions-im-ban-user-icon.png') }}" alt="Ban" /></a>
+        {% include "ClubLayoutBundle:Default:ban_link.html.twig" with {'url':path('admin_user_ban', { 'id':user.id })} %}
         <a href="{{ path('admin_user_group', { 'id':user.id }) }}"><img src="{{ asset('bundles/clublayout/images/icons/16/user-group-icon.png') }}" alt="Group" /></a>
         <a href="{{ path('admin_user_note', { 'id':user.id }) }}"><img src="{{ asset('bundles/clublayout/images/icons/16/Folder-icon.png') }}" alt="Note" /></a>
         <a href="{{ path('club_user_adminuser_shop', { 'id':user.id }) }}"><img src="{{ asset('bundles/clublayout/images/icons/16/shopping-cart-insert-icon.png') }}" alt="Shop As" /></a>
