--- a/src/Club/UserBundle/Resources/views/Group/new.html.twig
+++ b/src/Club/UserBundle/Resources/views/Group/new.html.twig
@@ -1,8 +1,8 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
-
 {% block body %}
 
+<h2>{% trans %}Group{% endtrans %}</h2>
 <form method="post" action="{{ path('admin_group_new') }}">
 {% include "ClubUserBundle:Group:form.html.twig" with {'form': form} %}
 </form>
