--- a/src/Club/UserBundle/Resources/views/AdminUser/form.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/form.html.twig
@@ -1,32 +1,32 @@
   <fieldset>
     <legend>Personal Information</legend>
 
-    <p>{{ form_row(form.member_number) }}</p>
-    <p>{{ form_row(form.profile.first_name) }}</p>
-    <p>{{ form_row(form.profile.last_name) }}</p>
-    <p>{{ form_row(form.profile.gender) }}</p>
-    <p>{{ form_row(form.profile.day_of_birth) }}</p>
+    {{ form_row(form.member_number) }}
+    {{ form_row(form.profile.first_name) }}
+    {{ form_row(form.profile.last_name) }}
+    {{ form_row(form.profile.gender) }}
+    {{ form_row(form.profile.day_of_birth) }}
   </fieldset>
 
   <fieldset>
     <legend>Address Information</legend>
 
-    <p>{{ form_row(form.profile.profile_address.street) }}</p>
-    <p>{{ form_row(form.profile.profile_address.postal_code) }}</p>
-    <p>{{ form_row(form.profile.profile_address.city) }}</p>
-    <p>{{ form_row(form.profile.profile_address.country) }}</p>
+    {{ form_row(form.profile.profile_address.street) }}
+    {{ form_row(form.profile.profile_address.postal_code) }}
+    {{ form_row(form.profile.profile_address.city) }}
+    {{ form_row(form.profile.profile_address.country) }}
   </fieldset>
 
   <fieldset>
     <legend>Email Information</legend>
 
-    <p>{{ form_row(form.profile.profile_email.email_address) }}</p>
+    {{ form_row(form.profile.profile_email.email_address) }}
   </fieldset>
 
   <fieldset>
     <legend>Phone Information</legend>
 
-    <p>{{ form_row(form.profile.profile_phone.number) }}</p>
+    {{ form_row(form.profile.profile_phone.number) }}
   </fieldset>
 
   {{ form_row(form._token) }}
