Fixed installer form.

--- a/src/Club/InstallerBundle/Resources/views/Installer/location.html.twig
+++ b/src/Club/InstallerBundle/Resources/views/Installer/location.html.twig
@@ -5,7 +5,7 @@
 
 <p>This is the installer program of ClubMaster.</p>
 
-<form methmd="post" action="">
+<form method="post" action="{{ path('club_installer_installer_location') }}">
   <fieldset>
     <legend>Location Information</legend>
 
