Translated admin user page.

--- a/src/Club/LayoutBundle/Resources/views/Default/delete_link.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/delete_link.html.twig
@@ -1,1 +1,1 @@
-<a onclick="return confirm('Are you sure?');" href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/ico-delete.gif') }}" class="ico" alt="Delete" title="Delete" /></a>
+<a onclick="return confirm('{% trans %}Are you sure?{% endtrans %}');" href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/ico-delete.gif') }}" class="ico" alt="{% trans %}Delete{% endtrans %}" title="{% trans %}Delete{% endtrans %}" /></a>
