--- a/src/Club/LayoutBundle/Resources/views/Default/edit_link.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/edit_link.html.twig
@@ -1,1 +1,1 @@
-<a href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/ico-edit.gif') }}" class="ico" alt="Edit" /></a>
+<a href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/ico-edit.gif') }}" class="ico" alt="{% trans %}Edit{% endtrans %}" title="{% trans %}Edit{% endtrans %}" /></a>
