--- a/src/Club/UserBundle/Resources/views/Ban/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Ban/index.html.twig
@@ -1,8 +1,7 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
-
 {% block body %}
-<h2>Bans</h2>
+<h2>{% trans %}Bans{% endtrans %}</h2>
 
 <table>
   <thead>
