--- a/src/Club/UserBundle/Resources/views/AdminUser/group.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/group.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
 <form method="post" action="{{ path('admin_user_group', {'id': user.id}) }}">
-{{ form_row(form) }}
+{{ form_widget(form) }}
 {% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
 </form>
 
