--- a/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
@@ -3,8 +3,8 @@
 {% block body %}
 
 <p class="box">
-  <a href="{{ path('admin_user_new') }}" class="btn-create"><span>Create user</span></a>
-  <a href="javascript:toggle('submit');" class="btn-create"><span>Show filter</span></a>
+  <a href="{{ path('admin_user_new') }}" class="btn-create"><span>{% trans %}Create user{% endtrans %}</span></a>
+  <a href="javascript:toggle('submit');" class="btn-create"><span>{% trans %}Show filter{% endtrans %}</span></a>
 </p>
 
 {% render "ClubUserBundle:Filter:getFilter" %}
@@ -16,18 +16,18 @@
   <thead>
     <tr>
       <th>[x]</th>
-      <th>Number</th>
-      <th>Name</th>
-      <th>Created At</th>
-      <th>Actions</th>
+      <th>{% trans %}Number{% endtrans %}</th>
+      <th>{% trans %}Name{% endtrans %}</th>
+      <th>{% trans %}Created at{% endtrans %}</th>
+      <th>{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
     <tr class="bg">
       <td colspan="7" class="arrow-01">
         <select name="" class="input-text">
-          <option value="">Ban selected</option>
-        </select>&nbsp;<input type="submit" value="OK" />
+          <option value="">{% trans %}Ban selected{% endtrans %}</option>
+        </select>&nbsp;<input type="submit" value="{% trans %}OK{% endtrans %}" />
       </td>
     </tr>
   </tfoot>
@@ -39,18 +39,18 @@
       <td>{{ user.profile.firstName }} {{ user.profile.lastName }}</td>
       <td>{{ user.createdAt|date("Y-m-d") }}</td>
       <td>
-        <a href="{{ path('admin_user_edit', { 'id':user.id }) }}"><img src="{{ asset('bundles/clublayout/images/ico-edit.gif') }}" class="ico" alt="Edit" /></a>
+        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_user_edit', { 'id':user.id })} %}
         {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('admin_user_delete', { 'id':user.id })} %}
-        <a href="{{ path('admin_shop_subscription', { 'id':user.id }) }}"><img src="{{ asset('bundles/clublayout/images/icons/16/System-Security-Card-icon.png') }}" alt="Subscription" /></a>
+        {% include "ClubLayoutBundle:Default:subscription_link.html.twig" with {'url':path('admin_shop_subscription', { 'id':user.id })} %}
         {% include "ClubLayoutBundle:Default:ban_link.html.twig" with {'url':path('admin_user_ban', { 'id':user.id })} %}
-        <a href="{{ path('admin_user_group', { 'id':user.id }) }}"><img src="{{ asset('bundles/clublayout/images/icons/16/user-group-icon.png') }}" alt="Group" /></a>
-        <a href="{{ path('admin_user_note', { 'id':user.id }) }}"><img src="{{ asset('bundles/clublayout/images/icons/16/Folder-icon.png') }}" alt="Note" /></a>
-        <a href="{{ path('club_user_adminuser_shop', { 'id':user.id }) }}"><img src="{{ asset('bundles/clublayout/images/icons/16/shopping-cart-insert-icon.png') }}" alt="Shop As" /></a>
+        {% include "ClubLayoutBundle:Default:group_link.html.twig" with {'url':path('admin_user_group', { 'id':user.id })} %}
+        {% include "ClubLayoutBundle:Default:note_link.html.twig" with {'url':path('admin_user_note', { 'id':user.id })} %}
+        {% include "ClubLayoutBundle:Default:shop_as_link.html.twig" with {'url':path('club_user_adminuser_shop', { 'id':user.id })} %}
       </td>
     </tr>
   {% else %}
   <tr>
-    <td colspan="5">There are no users at the time</td>
+    <td colspan="5">{% trans %}There are no users in the system.{% endtrans %}</td>
   </tr>
   {% endfor %}
   </tbody>
