--- a/src/Club/LayoutBundle/Resources/views/Default/config_link.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/config_link.html.twig
@@ -1,1 +1,1 @@
-<a href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/ico-settings.gif') }}" class="ico" alt="Config" /></a>
+<a href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/ico-settings.gif') }}" class="ico" alt="{% trans %}Config{% endtrans %}" title="{% trans %}Config{% endtrans %}" /></a>
