--- a/src/Club/TaskBundle/Resources/views/Task/index.html.twig
+++ b/src/Club/TaskBundle/Resources/views/Task/index.html.twig
@@ -1,19 +1,18 @@
 {% extends "ClubTaskBundle::base.html.twig" %}
 
 {% block body %}
-
-<h2>Task</h2>
+<h2>{% trans %}Task{% endtrans %}</h2>
 
 <table>
   <thead>
     <tr>
-      <th>Task</th>
-      <th>Enabled</th>
-      <th>Locked</th>
-      <th>Last run at</th>
-      <th>Next run at</th>
-      <th>Task interval</th>
-      <th>Actions</th>
+      <th>{% trans %}Task{% endtrans %}</th>
+      <th>{% trans %}Enabled{% endtrans %}</th>
+      <th>{% trans %}Locked{% endtrans %}</th>
+      <th>{% trans %}Last run at{% endtrans %}</th>
+      <th>{% trans %}Next run at{% endtrans %}</th>
+      <th>{% trans %}Task interval{% endtrans %}</th>
+      <th>{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
@@ -35,14 +34,14 @@
       <td>{{ task.nextRunAt|date('Y-m-d H:i:s') }}</td>
       <td>{{ task.taskInterval }}</td>
       <td>
-        <a href="{{ path('admin_task_disable', {'id':task.id}) }}"><img src="{{ asset('bundles/clublayout/images/ico-delete.gif') }}" title="Disable" alt="disable" /></a>
-        <a href="{{ path('admin_task_enable', {'id':task.id}) }}"><img src="{{ asset('bundles/clublayout/images/ico-done.gif') }}" title="Enable" alt="enable" /></a>
-        <a href="{{ path('admin_task_run', {'id':task.id}) }}"><img src="{{ asset('bundles/clublayout/images/ico-settings.gif') }}" title="Run" alt="run" /></a>
+        {% include "ClubLayoutBundle:Default:disable_link.html.twig" with {'url':path('admin_task_disable', {'id':task.id})} %}
+        {% include "ClubLayoutBundle:Default:enable_link.html.twig" with {'url':path('admin_task_enable', {'id':task.id})} %}
+        {% include "ClubLayoutBundle:Default:run_link.html.twig" with {'url':path('admin_task_run', {'id':task.id})} %}
       </td>
     </tr>
   {% else %}
   <tr>
-    <td colspan="7">There are no tasks at the time</td>
+    <td colspan="7">{% trans %}There are no tasks.{% endtrans %}</td>
   </tr>
   {% endfor %}
   </tbody>
