--- a/src/Club/LayoutBundle/Resources/views/Default/show_link.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/show_link.html.twig
@@ -1,1 +1,1 @@
-<a href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/ico-show.gif') }}" class="ico" alt="Show" /></a>
+<a href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/ico-show.gif') }}" class="ico" alt="{% trans %}Show{% endtrans %}" /></a>
