--- a/src/Club/MailBundle/Resources/views/AdminMail/show.html.twig
+++ b/src/Club/MailBundle/Resources/views/AdminMail/show.html.twig
@@ -1,7 +1,7 @@
 {% extends "ClubMailBundle::base.html.twig" %}
 
 {% block body %}
-<h2>Mail</h2>
+<h2>{% trans %}Mail{% endtrans %}</h2>
 
 <fieldset>
 <textarea style="width:100%; height: 300px; padding: 10px;">
