--- a/src/Club/LayoutBundle/Resources/views/Default/ledger_link.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/ledger_link.html.twig
@@ -1,1 +1,1 @@
-<a href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/icons/16/sales-report-icon.png') }}" class="ico" alt="Ledger" title="Ledger" /></a>
+<a href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/icons/16/sales-report-icon.png') }}" class="ico" alt="{% trans %}Ledger{% endtrans %}" title="{% trans %}Ledger{% endtrans %}" /></a>
